--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
          uses: squarecloudofc/github-action@v2
          with:
            command: commit --file project.zip ${{ secrets.SQUARECLOUD_APP_ID }}
-           token: '${{ secrets.SQUARE_CLOUD_TOKEN }}'
+           token: '${{ secrets.SQUARECLOUD_TOKEN }}'
