--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
  
        - name: Build website
          run: npm run build && chmod -R 777 .next next.config.ts package.json
+         env:
+          NEXT_PUBLIC_GA_ID: ${{ secrets.NEXT_PUBLIC_GA_ID }}
  
        - name: Add website to zip
          run: zip -r project.zip package.json .next next.config.ts public -x ".next/cache/*"
